--- a/projetF-struts/src/main/webapp/css/default.css
+++ b/projetF-struts/src/main/webapp/css/default.css
@@ -1,5 +1,9 @@
 @import "http://fonts.googleapis.com/css?family=Roboto:400,500";
 
+html, body {
+    height: 100%;
+}
+
 body {
     padding-top: 60px; /*50+10px*/
     padding-bottom: 20px;
@@ -20,6 +24,12 @@ footer .container p {
     margin-bottom: 0;
 }
 
+[class^="icon-"],
+[class*="icon-"] {
+    /*vertical-align: baseline;*/
+    /*line-height: normal;*/
+}
+
 .error-template {
     padding: 40px 15px;
     text-align: center;
@@ -38,10 +48,11 @@ footer .container p {
     height:100%;
     width:100%;
     text-align: center;
+    font: 0/0 a;
 }
 
 .vertical-center:before {
-    content: "";
+    content: '';
     display: inline-block;
     height: 100%;
     vertical-align: middle;
@@ -51,20 +62,28 @@ footer .container p {
     display: inline-block;
     max-width: 100%;
     vertical-align: middle;
+    font: 16px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.container {
+    text-align: left;
 }
 
 #navbar-login {
     min-width: 250px;
-    padding: 15px 15px 0px;
+    padding: 15px;
 }
 
 #form-login .panel-body {
-    padding-bottom: 0px;
+    padding-bottom: 15px;
 }
 
-/** PieTimer CSS */
-.box .space {
-    height: 30px;
+
+/** ListQCM */
+.left-corner {
+    position: absolute;
+    top: 70px;
+    left: 5px;
 }
 
 .right-corner {
@@ -73,33 +92,13 @@ footer .container p {
     right: 5px;
 }
 
-.left-corner {
-    position: absolute;
-    top: 70px;
-    left: 5px;
-}
-
-.mycheckbox {
-    display: inline-block;
-}
-
-.pietimer {
-    position:relative;
-    font-size: 200px;
-    width:1em;
-    height:1em;
-    float: left;
-}
-
-.vertical-center > .container {
-    display: inline-block;
-    max-width: 100%;
-    vertical-align: middle;
-}
-
-.right-corner > a{
+.right-corner > a {
     padding: 6px 8px;
     color: black;
+}
+
+.box .space {
+    height: 30px;
 }
 
 .box > .icon {
@@ -116,18 +115,18 @@ footer .container p {
     border: 8px solid white;
     line-height: 88px;
     border-radius: 50%;
-    background: #63B76C;
+    background: #63b76c;
     vertical-align: middle;
 }
 
 .box > .icon:hover > .image {
-    background: #333;
+    background: #333333;
 }
 
 .box > .icon > .image > i {
     font-size: 36px !important;
     color: #fff !important;
-    top: 27%;
+    top: 5px;
 }
 
 .box > .icon:hover > .image > i {
@@ -144,41 +143,41 @@ footer .container p {
 .box > .icon:hover > .info {
     background: rgba(0, 0, 0, 0.04);
     border-color: #e0e0e0;
-    color: white;
+    /*color: white;*/
 }
 
 .box > .icon > .info > h3.title {
-    font-family: "Roboto",sans-serif !important;
+    font-family: "Roboto", sans-serif !important;
     font-size: 16px;
-    color: #222;
+    color: #222222;
     font-weight: 500;
 }
 
 .box > .icon > .info > p {
-    font-family: "Roboto",sans-serif !important;
+    font-family: "Roboto", sans-serif !important;
     font-size: 13px;
-    color: #666;
+    color: #666666;
     line-height: 1.5em;
     margin: 20px;
 }
 
 .box > .icon:hover > .info > h3.title, .box > .icon:hover > .info > p, .box > .icon:hover > .info > .more > a {
-    color: #222;
+    color: #222222;
 }
 
 .box > .icon > .info > .more a {
-    font-family: "Roboto",sans-serif !important;
+    font-family: "Roboto", sans-serif !important;
     font-size: 12px;
-    color: #222;
+    color: #222222;
     line-height: 12px;
     text-transform: uppercase;
     text-decoration: none;
 }
 
 .box > .icon:hover > .info > .more > a, .box > .icon:hover > .right-corner > a, .box > .icon:hover > .left-corner > a {
-    color: #fff;
+    color: #ffffff;
     padding: 6px 8px;
-    background-color: #63B76C;
+    background-color: #63b76c;
 }
 
 .box > .icon:hover > .info > .form {
@@ -186,82 +185,39 @@ footer .container p {
 }
 
 .box > .icon > .info > .form {
-    color: #666;
+    color: #666666;
 }
 
 .box > .icon:hover > .info > form > fieldset > fieldset > .btn {
-    background-color: #333;
-    border-color: #333;
+    background-color: #333333;
+    border-color: #333333;
 }
 
-.box > .icon > .info > form > fieldset > fieldset > .form-group > .form-group > .controls > .checkbox  > label, .box > .icon > .info > form > fieldset > fieldset > .form-group > .form-group > .controls > .radio > .radio{
+.box > .icon > .info > form > fieldset > fieldset > .form-group > .form-group > .controls > .checkbox > label, .box > .icon > .info > form > fieldset > fieldset > .form-group > .form-group > .controls > .radio > .radio {
     display: inline-block;
     margin: 0px;
 }
 
-.pietimer > .percent {
-    position: absolute;
-    top: -0.5em;
-    left: 0;
-    width: 3.5em;
-    font-size: 0.23em;
-    text-align:center;
-    display: none;
+.box > .icon:hover > .info > .more > span, .box > .icon:hover > .right-corner > span, .box > .icon:hover > .left-corner > span {
+    color: #ffffff;
+    padding: 6px 8px;
+    background-color: #63b76c;
 }
 
-.pietimer > .slice {
-    position:absolute;
-    width:1em;
-    height:1em;
-    clip:rect(0px,1em,1em,0.4em);
+.box > .icon:hover > .info > .more > .invalid, .box > .icon:hover > .right-corner > .invalid, .box > .icon:hover > .left-corner > .invalid {
+    background-color: #d2322d;
+}
+/* ListQCM **/
+
+/** QuestionQCM */
+.line-block {
+    display: block;
+    width: 100%;
 }
 
-.pietimer > .slice.gt50 {
-    clip:rect(auto, auto, auto, auto);
+.inline-centered-text-left {
+    display: inline-block;
+    margin: 0 auto;
+    text-align: left;
 }
-
-.pietimer > .slice > .pie {
-    border: 0.1em solid #c0c0c0;
-    position:absolute;
-    width:0.8em; /* 1 - (2 * border width) */
-    height:0.8em; /* 1 - (2 * border width) */
-    clip:rect(0em,0.4em,1em,0em);
-    -moz-border-radius:0.5em;
-    -webkit-border-radius:0.5em;
-    border-radius:0.5em;
-}
-
-.pietimer > .slice > .pie.fill {
-    -moz-transform:rotate(180deg) !important;
-    -webkit-transform:rotate(180deg) !important;
-    -o-transform:rotate(180deg) !important;
-    transform:rotate(180deg) !important;
-}
-
-.pietimer.fill > .percent {
-    display: none;
-}
-
-.pietimer.fill > .slice > .pie {
-    border: transparent;
-    background-color: #c0c0c0;
-    width:1em;
-    height:1em;
-}
-
-#timer {
-    margin: 4px;
-    width: 80px;
-}
-    /** Customization */
-    .box > .icon:hover > .info > .more > span , .box > .icon:hover > .right-corner > span, .box > .icon:hover > .left-corner > span {
-        color: #fff;
-        padding: 6px 8px;
-        background-color: #63B76C;
-    }
-
-    .box > .icon:hover > .info > .more > .invalid, .box > .icon:hover > .right-corner > .invalid, .box > .icon:hover > .left-corner > .invalid {
-        background-color: #d2322d;
-    }
-    /* Customization **/
-/* PieTimer CSS **/
+/* QuestionQCM **/
