[struts] JQueryUI avec theme bootstrap. + Avancement changer etatQCM

--- a/projetF-struts/src/main/webapp/css/default.css
+++ b/projetF-struts/src/main/webapp/css/default.css
@@ -216,9 +216,12 @@ footer .container p {
     width: 100%;
 }
 
-.inline-centered-text-left {
+.inline-centered {
     display: inline-block;
     margin: 0 auto;
+}
+
+.text-left {
     text-align: left;
 }
 /* QuestionQCM **/
