[struts] css .infoJTable pour un beau visuel. - Ajout de listUser au menu admin

--- a/projetF-struts/src/main/webapp/css/default.css
+++ b/projetF-struts/src/main/webapp/css/default.css
@@ -225,3 +225,9 @@ footer .container p {
     text-align: left;
 }
 /* QuestionQCM **/
+
+/** JTable */
+.infoJTable {
+    overflow: hidden;
+}
+/* JTable **/
