[struts] Ajax pour changer le statut d'un QCM ok ! - Correction des classes DeleteQCM et StatusQCM vers un résultat JSON. - Suppression d'une définition inutile dans tiles.xml

--- a/projetF-struts/src/main/webapp/css/default.css
+++ b/projetF-struts/src/main/webapp/css/default.css
@@ -206,7 +206,7 @@ footer .container p {
 }
 
 .box > .icon:hover > .info > .more > .invalid, .box > .icon:hover > .right-corner > .invalid, .box > .icon:hover > .left-corner > .invalid {
-    background-color: #d2322d;
+    background-color: #f0ad4e;
 }
 /* ListQCM **/
 
